--- a/index.html
+++ b/index.html
@@ -242,9 +242,8 @@
                             <div class="crop-mark crop-tr"></div>
                             <div class="crop-mark crop-bl"></div>
                             <div class="crop-mark crop-br"></div>
-                            <!-- ФОТО: Замініть посилання на 'котокір.jpg' після завантаження сайту, щоб побачити ваше фото -->
                             <img src="котокір.jpg" 
-                                 alt="Нуарний кіт" 
+                                 alt="котокір" 
                                  class="w-full h-auto object-cover aspect-[3/4] grayscale contrast-125"
                                  title="Замініть src на 'котокір.jpg', щоб побачити фото з котом і цигаркою">
                             <div class="mt-4 flex justify-between items-end text-[10px] text-stone-400 font-mono">
