--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             <div class="crop-mark crop-tr"></div>
                             <div class="crop-mark crop-bl"></div>
                             <div class="crop-mark crop-br"></div>
-                            <img src="котокір.jpg" 
+                            <img src="https://i.pinimg.com/originals/28/57/cc/2857cc95bce8f9ee60370586504a1cb0.png" 
                                  alt="котокір" 
                                  class="w-full h-auto object-cover aspect-[3/4] grayscale contrast-125"
                                  title="Замініть src на 'котокір.jpg', щоб побачити фото з котом і цигаркою">
