--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
                             <div class="crop-mark crop-tr"></div>
                             <div class="crop-mark crop-bl"></div>
                             <div class="crop-mark crop-br"></div>
+                            <!-- ФОТО: Оновлено за вашим посиланням -->
                             <img src="https://i.pinimg.com/originals/28/57/cc/2857cc95bce8f9ee60370586504a1cb0.png" 
-                                 alt="котокір" 
-                                 class="w-full h-auto object-cover aspect-[3/4] grayscale contrast-125"
-                                 title="Замініть src на 'котокір.jpg', щоб побачити фото з котом і цигаркою">
+                                 alt="Кіт з цигаркою" 
+                                 class="w-full h-auto object-cover aspect-[3/4] grayscale contrast-125">
                             <div class="mt-4 flex justify-between items-end text-[10px] text-stone-400 font-mono">
                                 <span>FIG. 01 — ARCHETYPE</span>
                                 <div class="flex gap-1">
@@ -471,7 +471,7 @@
                 
                 <!-- Соціальні іконки -->
                 <div class="flex justify-center gap-8 items-center mb-12">
-                    <!-- Instagram (ДОДАНО) -->
+                    <!-- Instagram -->
                     <a href="https://www.instagram.com/mon.mothma_design?igsh=MXBwamdzamxhaGNuZw%3D%3D&utm_source=qr" target="_blank" class="text-ink hover:text-stone-500 transition-all duration-300 hover:scale-110" title="Instagram">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
                     </a>
@@ -481,13 +481,13 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.198 2.433a2.242 2.242 0 0 0-1.022.215l-8.609 3.33c-2.068.8-4.133 1.598-5.724 2.21a405.15 405.15 0 0 1-2.849 1.09c-.42.147-.99.332-1.473.901-.728.968.193 1.798.919 2.286 1.61.516 3.275 1.009 4.654 1.472.509 1.793.997 3.592 1.48 5.388.16.36.506.494.864.498l-.002.018s.281.028.555-.038a2.1 2.1 0 0 0 .933-.517c.345-.324 1.28-1.244 1.811-1.764l3.999 2.952.032.018s.442.311 1.09.355c.324.022.75-.04 1.116-.308.37-.27.613-.702.728-1.196.342-1.492 2.61-12.263 2.975-14.028l.014-.075-.048.019a2.89 2.89 0 0 0-1.565-.953z"/></svg>
                     </a>
                     
-                    <!-- Viber -->
-                    <a href="viber://chat?number=%2B380961775991" class="text-ink hover:text-stone-500 transition-all duration-300 hover:scale-110" title="Viber">
+                    <!-- Viber (ОНОВЛЕНО) -->
+                    <a href="viber://chat?number=%2B380931980588" class="text-ink hover:text-stone-500 transition-all duration-300 hover:scale-110" title="Viber">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path><path d="M14.05 2a9 9 0 0 1 8 7.94"></path><path d="M14.05 6A5 5 0 0 1 18 10"></path></svg>
                     </a>
 
-                    <!-- WhatsApp -->
-                    <a href="https://wa.me/380961775991" target="_blank" class="text-ink hover:text-stone-500 transition-all duration-300 hover:scale-110" title="WhatsApp">
+                    <!-- WhatsApp (ОНОВЛЕНО) -->
+                    <a href="https://wa.me/380931980588" target="_blank" class="text-ink hover:text-stone-500 transition-all duration-300 hover:scale-110" title="WhatsApp">
                         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M3 21l1.65-3.8a9 9 0 1 1 3.4 2.9L3 21"></path></svg>
                     </a>
 
