--- a/index.html
+++ b/index.html
@@ -1019,8 +1019,8 @@
             </div>
         </div>
         <div class="max-w-7xl mx-auto px-6 mt-16 pt-8 border-t border-stone-800 flex flex-col md:flex-row justify-between items-center text-xs text-stone-500 font-mono">
-            <p>&copy; 2024 Mon Mothma Design. Усі права застережено.</p>
-            <p>Designed with <span class="text-stone-300">♥</span> in Ukraine</p>
+            <p>&copy; 2025 Mon Mothma Design. Усі права захищено.</p>
+            <p>Designed with love <span class="text-stone-300">♥</span>Created in Ukraine</p>
         </div>
     </footer>
 
